tests/ui/transparent-display.stderr
error: cannot have both #[display(transparent)] and a display attribute
 --> tests/ui/transparent-display.rs:5:1
  |
5 | #[display("...")]
  | ^^^^^^^^^^^^^^^
